fixed my code to align my webpage

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,27 @@
 html,body{
-    height:99vh;
+    height: 99vh;
+}
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+footer{
+    display:flex;
+    justify-content: space-between;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 nav{
     display:flex;
-    flex-direction:row;
-    justifiy-content:space-between;
+    justify-content: space-between;
 }
+
 
 
 
